Prueba con varias declaraciones/ANTLR/src/main/PParser.java
// $ANTLR 3.5-rc-2 C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g 2014-03-02 01:50:01

package main;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class PParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGNMENT", "BOOLEAN", "DECL", 
		"ELSE", "EXPR", "FOR", "ID", "IF", "INIT", "INT", "INT_TYPE", "THEN", 
		"VARDEF", "WRITE", "WS", "'('", "')'", "'*'", "'+'", "','", "';'", "'<'", 
		"'='", "'=='", "'||'"
	};
	public static final int EOF=-1;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int ASSIGNMENT=4;
	public static final int BOOLEAN=5;
	public static final int DECL=6;
	public static final int ELSE=7;
	public static final int EXPR=8;
	public static final int FOR=9;
	public static final int ID=10;
	public static final int IF=11;
	public static final int INIT=12;
	public static final int INT=13;
	public static final int INT_TYPE=14;
	public static final int THEN=15;
	public static final int VARDEF=16;
	public static final int WRITE=17;
	public static final int WS=18;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public PParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public PParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return PParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g"; }


	public static class parse_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "parse"
	// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:26:1: parse : ( declaration )+ ( statement )* EOF !;
	public final PParser.parse_return parse() throws RecognitionException {
		PParser.parse_return retval = new PParser.parse_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EOF3=null;
		ParserRuleReturnScope declaration1 =null;
		ParserRuleReturnScope statement2 =null;

		Object EOF3_tree=null;

		try {
			// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:27:3: ( ( declaration )+ ( statement )* EOF !)
			// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:27:6: ( declaration )+ ( statement )* EOF !
			{
			root_0 = (Object)adaptor.nil();


			// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:27:6: ( declaration )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==INT_TYPE) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:27:6: declaration
					{
					pushFollow(FOLLOW_declaration_in_parse68);
					declaration1=declaration();
					state._fsp--;

					adaptor.addChild(root_0, declaration1.getTree());

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:27:19: ( statement )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( ((LA2_0 >= ID && LA2_0 <= IF)||LA2_0==WRITE) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:27:19: statement
					{
					pushFollow(FOLLOW_statement_in_parse71);
					statement2=statement();
					state._fsp--;

					adaptor.addChild(root_0, statement2.getTree());

					}
					break;

				default :
					break loop2;
				}
			}

			EOF3=(Token)match(input,EOF,FOLLOW_EOF_in_parse74); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "parse"


	public static class declaration_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "declaration"
	// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:30:1: declaration : ( INT_TYPE ID ';' -> ^( DECL INT_TYPE ID ) | INT_TYPE ID '=' INT ( ',' ID '=' INT )* ';' -> ( ^( INIT INT_TYPE ID INT ) )+ );
	public final PParser.declaration_return declaration() throws RecognitionException {
		PParser.declaration_return retval = new PParser.declaration_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token INT_TYPE4=null;
		Token ID5=null;
		Token char_literal6=null;
		Token INT_TYPE7=null;
		Token ID8=null;
		Token char_literal9=null;
		Token INT10=null;
		Token char_literal11=null;
		Token ID12=null;
		Token char_literal13=null;
		Token INT14=null;
		Token char_literal15=null;

		Object INT_TYPE4_tree=null;
		Object ID5_tree=null;
		Object char_literal6_tree=null;
		Object INT_TYPE7_tree=null;
		Object ID8_tree=null;
		Object char_literal9_tree=null;
		Object INT10_tree=null;
		Object char_literal11_tree=null;
		Object ID12_tree=null;
		Object char_literal13_tree=null;
		Object INT14_tree=null;
		Object char_literal15_tree=null;
		RewriteRuleTokenStream stream_INT=new RewriteRuleTokenStream(adaptor,"token INT");
		RewriteRuleTokenStream stream_INT_TYPE=new RewriteRuleTokenStream(adaptor,"token INT_TYPE");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_23=new RewriteRuleTokenStream(adaptor,"token 23");
		RewriteRuleTokenStream stream_24=new RewriteRuleTokenStream(adaptor,"token 24");
		RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");

		try {
			// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:31:2: ( INT_TYPE ID ';' -> ^( DECL INT_TYPE ID ) | INT_TYPE ID '=' INT ( ',' ID '=' INT )* ';' -> ( ^( INIT INT_TYPE ID INT ) )+ )
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==INT_TYPE) ) {
				int LA4_1 = input.LA(2);
				if ( (LA4_1==ID) ) {
					int LA4_2 = input.LA(3);
					if ( (LA4_2==24) ) {
						alt4=1;
					}
					else if ( (LA4_2==26) ) {
						alt4=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 2, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:31:4: INT_TYPE ID ';'
					{
					INT_TYPE4=(Token)match(input,INT_TYPE,FOLLOW_INT_TYPE_in_declaration89);  
					stream_INT_TYPE.add(INT_TYPE4);

					ID5=(Token)match(input,ID,FOLLOW_ID_in_declaration91);  
					stream_ID.add(ID5);

					char_literal6=(Token)match(input,24,FOLLOW_24_in_declaration93);  
					stream_24.add(char_literal6);

					// AST REWRITE
					// elements: INT_TYPE, ID
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 31:20: -> ^( DECL INT_TYPE ID )
					{
						// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:31:23: ^( DECL INT_TYPE ID )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(DECL, "DECL"), root_1);
						adaptor.addChild(root_1, stream_INT_TYPE.nextNode());
						adaptor.addChild(root_1, stream_ID.nextNode());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;
				case 2 :
					// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:32:4: INT_TYPE ID '=' INT ( ',' ID '=' INT )* ';'
					{
					INT_TYPE7=(Token)match(input,INT_TYPE,FOLLOW_INT_TYPE_in_declaration108);  
					stream_INT_TYPE.add(INT_TYPE7);

					ID8=(Token)match(input,ID,FOLLOW_ID_in_declaration110);  
					stream_ID.add(ID8);

					char_literal9=(Token)match(input,26,FOLLOW_26_in_declaration112);  
					stream_26.add(char_literal9);

					INT10=(Token)match(input,INT,FOLLOW_INT_in_declaration114);  
					stream_INT.add(INT10);

					// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:32:24: ( ',' ID '=' INT )*
					loop3:
					while (true) {
						int alt3=2;
						int LA3_0 = input.LA(1);
						if ( (LA3_0==23) ) {
							alt3=1;
						}

						switch (alt3) {
						case 1 :
							// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:32:25: ',' ID '=' INT
							{
							char_literal11=(Token)match(input,23,FOLLOW_23_in_declaration117);  
							stream_23.add(char_literal11);

							ID12=(Token)match(input,ID,FOLLOW_ID_in_declaration119);  
							stream_ID.add(ID12);

							char_literal13=(Token)match(input,26,FOLLOW_26_in_declaration121);  
							stream_26.add(char_literal13);

							INT14=(Token)match(input,INT,FOLLOW_INT_in_declaration123);  
							stream_INT.add(INT14);

							}
							break;

						default :
							break loop3;
						}
					}

					char_literal15=(Token)match(input,24,FOLLOW_24_in_declaration127);  
					stream_24.add(char_literal15);

					// AST REWRITE
					// elements: INT, ID, INT_TYPE
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 32:46: -> ( ^( INIT INT_TYPE ID INT ) )+
					{
						if ( !(stream_INT.hasNext()||stream_ID.hasNext()||stream_INT_TYPE.hasNext()) ) {
							throw new RewriteEarlyExitException();
						}
						while ( stream_INT.hasNext()||stream_ID.hasNext()||stream_INT_TYPE.hasNext() ) {
							// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:32:49: ^( INIT INT_TYPE ID INT )
							{
							Object root_1 = (Object)adaptor.nil();
							root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(INIT, "INIT"), root_1);
							adaptor.addChild(root_1, stream_INT_TYPE.nextNode());
							adaptor.addChild(root_1, stream_ID.nextNode());
							adaptor.addChild(root_1, stream_INT.nextNode());
							adaptor.addChild(root_0, root_1);
							}

						}
						stream_INT.reset();
						stream_ID.reset();
						stream_INT_TYPE.reset();

					}


					retval.tree = root_0;

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "declaration"


	public static class forDeclaration_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "forDeclaration"
	// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:35:1: forDeclaration : INT_TYPE ID '=' INT ( ',' ID '=' INT )* -> ( ^( INIT INT_TYPE ID INT ) )+ ;
	public final PParser.forDeclaration_return forDeclaration() throws RecognitionException {
		PParser.forDeclaration_return retval = new PParser.forDeclaration_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token INT_TYPE16=null;
		Token ID17=null;
		Token char_literal18=null;
		Token INT19=null;
		Token char_literal20=null;
		Token ID21=null;
		Token char_literal22=null;
		Token INT23=null;

		Object INT_TYPE16_tree=null;
		Object ID17_tree=null;
		Object char_literal18_tree=null;
		Object INT19_tree=null;
		Object char_literal20_tree=null;
		Object ID21_tree=null;
		Object char_literal22_tree=null;
		Object INT23_tree=null;
		RewriteRuleTokenStream stream_INT=new RewriteRuleTokenStream(adaptor,"token INT");
		RewriteRuleTokenStream stream_INT_TYPE=new RewriteRuleTokenStream(adaptor,"token INT_TYPE");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_23=new RewriteRuleTokenStream(adaptor,"token 23");
		RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");

		try {
			// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:36:2: ( INT_TYPE ID '=' INT ( ',' ID '=' INT )* -> ( ^( INIT INT_TYPE ID INT ) )+ )
			// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:36:4: INT_TYPE ID '=' INT ( ',' ID '=' INT )*
			{
			INT_TYPE16=(Token)match(input,INT_TYPE,FOLLOW_INT_TYPE_in_forDeclaration151);  
			stream_INT_TYPE.add(INT_TYPE16);

			ID17=(Token)match(input,ID,FOLLOW_ID_in_forDeclaration153);  
			stream_ID.add(ID17);

			char_literal18=(Token)match(input,26,FOLLOW_26_in_forDeclaration155);  
			stream_26.add(char_literal18);

			INT19=(Token)match(input,INT,FOLLOW_INT_in_forDeclaration157);  
			stream_INT.add(INT19);

			// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:36:24: ( ',' ID '=' INT )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==23) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:36:25: ',' ID '=' INT
					{
					char_literal20=(Token)match(input,23,FOLLOW_23_in_forDeclaration160);  
					stream_23.add(char_literal20);

					ID21=(Token)match(input,ID,FOLLOW_ID_in_forDeclaration162);  
					stream_ID.add(ID21);

					char_literal22=(Token)match(input,26,FOLLOW_26_in_forDeclaration164);  
					stream_26.add(char_literal22);

					INT23=(Token)match(input,INT,FOLLOW_INT_in_forDeclaration166);  
					stream_INT.add(INT23);

					}
					break;

				default :
					break loop5;
				}
			}

			// AST REWRITE
			// elements: ID, INT, INT_TYPE
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 36:43: -> ( ^( INIT INT_TYPE ID INT ) )+
			{
				if ( !(stream_ID.hasNext()||stream_INT.hasNext()||stream_INT_TYPE.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_ID.hasNext()||stream_INT.hasNext()||stream_INT_TYPE.hasNext() ) {
					// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:36:46: ^( INIT INT_TYPE ID INT )
					{
					Object root_1 = (Object)adaptor.nil();
					root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(INIT, "INIT"), root_1);
					adaptor.addChild(root_1, stream_INT_TYPE.nextNode());
					adaptor.addChild(root_1, stream_ID.nextNode());
					adaptor.addChild(root_1, stream_INT.nextNode());
					adaptor.addChild(root_0, root_1);
					}

				}
				stream_ID.reset();
				stream_INT.reset();
				stream_INT_TYPE.reset();

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "forDeclaration"


	public static class statement_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "statement"
	// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:39:1: statement : ( ifStatement | assignment | writeStatement );
	public final PParser.statement_return statement() throws RecognitionException {
		PParser.statement_return retval = new PParser.statement_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope ifStatement24 =null;
		ParserRuleReturnScope assignment25 =null;
		ParserRuleReturnScope writeStatement26 =null;


		try {
			// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:40:3: ( ifStatement | assignment | writeStatement )
			int alt6=3;
			switch ( input.LA(1) ) {
			case IF:
				{
				alt6=1;
				}
				break;
			case ID:
				{
				alt6=2;
				}
				break;
			case WRITE:
				{
				alt6=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}
			switch (alt6) {
				case 1 :
					// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:40:6: ifStatement
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_ifStatement_in_statement197);
					ifStatement24=ifStatement();
					state._fsp--;

					adaptor.addChild(root_0, ifStatement24.getTree());

					}
					break;
				case 2 :
					// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:41:6: assignment
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_assignment_in_statement204);
					assignment25=assignment();
					state._fsp--;

					adaptor.addChild(root_0, assignment25.getTree());

					}
					break;
				case 3 :
					// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:42:6: writeStatement
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_writeStatement_in_statement211);
					writeStatement26=writeStatement();
					state._fsp--;

					adaptor.addChild(root_0, writeStatement26.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "statement"


	public static class ifStatement_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "ifStatement"
	// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:47:1: ifStatement : IF a= expression THEN b= statement ( ELSE c= statement )? -> ^( IF $a $b ( $c)? ) ;
	public final PParser.ifStatement_return ifStatement() throws RecognitionException {
		PParser.ifStatement_return retval = new PParser.ifStatement_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token IF27=null;
		Token THEN28=null;
		Token ELSE29=null;
		ParserRuleReturnScope a =null;
		ParserRuleReturnScope b =null;
		ParserRuleReturnScope c =null;

		Object IF27_tree=null;
		Object THEN28_tree=null;
		Object ELSE29_tree=null;
		RewriteRuleTokenStream stream_THEN=new RewriteRuleTokenStream(adaptor,"token THEN");
		RewriteRuleTokenStream stream_IF=new RewriteRuleTokenStream(adaptor,"token IF");
		RewriteRuleTokenStream stream_ELSE=new RewriteRuleTokenStream(adaptor,"token ELSE");
		RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
		RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");

		try {
			// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:48:3: ( IF a= expression THEN b= statement ( ELSE c= statement )? -> ^( IF $a $b ( $c)? ) )
			// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:48:6: IF a= expression THEN b= statement ( ELSE c= statement )?
			{
			IF27=(Token)match(input,IF,FOLLOW_IF_in_ifStatement231);  
			stream_IF.add(IF27);

			pushFollow(FOLLOW_expression_in_ifStatement235);
			a=expression();
			state._fsp--;

			stream_expression.add(a.getTree());
			THEN28=(Token)match(input,THEN,FOLLOW_THEN_in_ifStatement237);  
			stream_THEN.add(THEN28);

			pushFollow(FOLLOW_statement_in_ifStatement241);
			b=statement();
			state._fsp--;

			stream_statement.add(b.getTree());
			// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:48:39: ( ELSE c= statement )?
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==ELSE) ) {
				alt7=1;
			}
			switch (alt7) {
				case 1 :
					// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:48:40: ELSE c= statement
					{
					ELSE29=(Token)match(input,ELSE,FOLLOW_ELSE_in_ifStatement244);  
					stream_ELSE.add(ELSE29);

					pushFollow(FOLLOW_statement_in_ifStatement248);
					c=statement();
					state._fsp--;

					stream_statement.add(c.getTree());
					}
					break;

			}

			// AST REWRITE
			// elements: b, a, IF, c
			// token labels: 
			// rule labels: retval, b, c, a
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);
			RewriteRuleSubtreeStream stream_b=new RewriteRuleSubtreeStream(adaptor,"rule b",b!=null?b.getTree():null);
			RewriteRuleSubtreeStream stream_c=new RewriteRuleSubtreeStream(adaptor,"rule c",c!=null?c.getTree():null);
			RewriteRuleSubtreeStream stream_a=new RewriteRuleSubtreeStream(adaptor,"rule a",a!=null?a.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 48:59: -> ^( IF $a $b ( $c)? )
			{
				// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:48:62: ^( IF $a $b ( $c)? )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot(stream_IF.nextNode(), root_1);
				adaptor.addChild(root_1, stream_a.nextTree());
				adaptor.addChild(root_1, stream_b.nextTree());
				// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:48:74: ( $c)?
				if ( stream_c.hasNext() ) {
					adaptor.addChild(root_1, stream_c.nextTree());
				}
				stream_c.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "ifStatement"


	public static class assignment_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "assignment"
	// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:51:1: assignment : ID '=' expression ';' -> ^( ASSIGNMENT ID expression ) ;
	public final PParser.assignment_return assignment() throws RecognitionException {
		PParser.assignment_return retval = new PParser.assignment_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token ID30=null;
		Token char_literal31=null;
		Token char_literal33=null;
		ParserRuleReturnScope expression32 =null;

		Object ID30_tree=null;
		Object char_literal31_tree=null;
		Object char_literal33_tree=null;
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_24=new RewriteRuleTokenStream(adaptor,"token 24");
		RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");
		RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");

		try {
			// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:52:3: ( ID '=' expression ';' -> ^( ASSIGNMENT ID expression ) )
			// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:52:6: ID '=' expression ';'
			{
			ID30=(Token)match(input,ID,FOLLOW_ID_in_assignment282);  
			stream_ID.add(ID30);

			char_literal31=(Token)match(input,26,FOLLOW_26_in_assignment284);  
			stream_26.add(char_literal31);

			pushFollow(FOLLOW_expression_in_assignment286);
			expression32=expression();
			state._fsp--;

			stream_expression.add(expression32.getTree());
			char_literal33=(Token)match(input,24,FOLLOW_24_in_assignment288);  
			stream_24.add(char_literal33);

			// AST REWRITE
			// elements: ID, expression
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 52:28: -> ^( ASSIGNMENT ID expression )
			{
				// C:\\Users\\Los_Kballeros\\Documents\\NetBeansProjects\\ANTLR\\src\\grammars\\P.g:52:31: ^( ASSIGNMENT ID expression )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ASSIGNMENT, "ASSIGNMENT"), root_1);
				adaptor.addChild(root_1, stream_ID.nextNode());
				adaptor.addChild(root_1, stream_expression.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "assignment"


	public static class writeStatement_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "writeStatement"
